# training_watcher

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/training_watcher/: __init__.py  agenteval.py  checkpoint.py  config.py  controller.py  logging_util.py  monitor.py  offload.py  smi.py  window.py
tests/: conftest.py  test_agenteval.py  test_checkpoint.py  test_checkpoint_cb.py  test_config.py  test_monitor.py  test_offload_gpu.py  test_self_check.py  test_signals.py  test_smi_parse.py  test_state_machine.py  test_window.py
